--- a/ShoppingCart/src/app/pages/inicio/inicio.component.html
+++ b/ShoppingCart/src/app/pages/inicio/inicio.component.html
@@ -1,22 +1,22 @@
 <div class="navbarSide">
     <div class="col-1 col-lg-1 col-md-1 col-sm-1 col-xs-1 contenedor-boton" >
-      <button type="button" class="btn btn-outline-light btn-lg" (click)="accionMenu()">
+      <button type="button" class="btn btn-outline-light btn-sm" (click)="accionMenu()">
           <span class="glyphicon glyphicon-menu-hamburger"></span>
       </button>            
     </div>
     <div>
         <label class="titulo-navbar">          
-            TIENDA E-COMERCE
+            TIENDA EL BARATON
         </label>
     </div> 
 </div>
 <div class="containerSide">
     <div class="col-lg-12 col-md-12 colsm-12 col-xs-12 contTable">
         <div class="row contTable">
-          <div class="col-lg-2 col-md-3 col-sm-5 col-xs-5 contenedorMenu ">
+          <div class="col-lg-3 col-md-3 col-sm-5 col-xs-5 contenedorMenu ">
             <app-menu [estadoMenu]='estadoMenu'></app-menu>
           </div>
-          <div class="col-lg-9 col-md-9 col-sm-5 col-xs-5 contenedorCarrito">
+          <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 contenedorCarrito">
             <app-carrito></app-carrito>
           </div>
         </div>
