--- a/ShoppingCart/src/app/pages/menu/menu.component.html
+++ b/ShoppingCart/src/app/pages/menu/menu.component.html
@@ -7,99 +7,113 @@
     [sidebarClass]="'demo-sidebar'" [ariaLabel]="'My sidebar'" (onOpenStart)="_onOpenStart()" (onOpened)="_onOpened()"
     (onCloseStart)="_onCloseStart()" (onClosed)="_onClosed()" (onTransitionEnd)="_onTransitionEnd()">
 
+    <div class="nav-side-menu">
+      <div class="brand">Categorias</div>
 
 
+      <div class="menu-list">
 
-    <label>pruebalsjljd;lKJD;SLKJ;Slider
-      ;ASDJN;Lkasd;lkJASD;L
-      ;askdj;LKASJD
-      as;LDKJasdjk
-      lasjdlas
-      alsj
+        <ul class="menu-content collapse out" *ngFor="let categoria of arrayCategorias">
 
-      asdas
-      das
-
-      wertter
-      
-    </label>
-    <!-- <div class="contenedor-menu">
-      <div class="nav-side-menu">
-        <div class="brand">Brand Logo</div>
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
-
-        <div class="menu-list">
-
-          <ul id="menu-content" class="menu-content collapse out">
-            <li>
-              <a href="#">
-                <i class="fa fa-dashboard fa-lg"></i> Dashboard
+          <li data-toggle="collapse" [attr.data-target]="'#'+categoria.name">
+            <a>
+              <i class="fa fa-gift fa-lg"></i> {{categoria.name}}
+              <span class="arrow"></span>
+            </a>
+          </li>
+          <ul class="sub-menu" *ngFor="let subMenu of categoria['sublevels']" id="{{categoria.name}}">
+            <li data-toggle="collapse" [attr.data-target]="'#'+subMenu.name">
+              <a>
+                <i class="fa fa-gift fa-lg"></i> {{subMenu.name}}
+                <span class="arrow"></span>
               </a>
             </li>
+            <ul class="sub-list" *ngFor="let sub of subMenu['sublevels']" id="{{subMenu.name}}" 
+            (click)="openDetalle(sub)">
+              <li data-toggle="collapse" [attr.data-target]="'#'+sub.name">
+                <a>
+                  <i class="fa fa-gift fa-lg"></i> {{sub.name}}
+                  <span class="arrow"></span>
+                </a>
+              </li>
+              <ul class="sub-list" *ngFor="let s of sub['sublevels']" id="{{sub.name}}" >
+                  <li data-toggle="collapse" [attr.data-target]="'#'+sub.name">
+                      <a>
+                        <i class="fa fa-gift fa-lg"></i> {{s.name}}
+                        <span class="arrow"></span>
+                      </a>
+                    </li>
+              </ul>
 
-            <li data-toggle="collapse" data-target="#products" class="collapsed active">
-              <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="products">
-              <li class="active"><a href="#">CSS3 Animation</a></li>
-              <li><a href="#">General</a></li>
-              <li><a href="#">Buttons</a></li>
-              <li><a href="#">Tabs & Accordions</a></li>
-              <li><a href="#">Typography</a></li>
-              <li><a href="#">FontAwesome</a></li>
-              <li><a href="#">Slider</a></li>
-              <li><a href="#">Panels</a></li>
-              <li><a href="#">Widgets</a></li>
-              <li><a href="#">Bootstrap Model</a></li>
             </ul>
-
-
-            <li data-toggle="collapse" data-target="#service" class="collapsed">
-              <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="service">
-              <li>New Service 1</li>
-              <li>New Service 2</li>
-              <li>New Service 3</li>
-            </ul>
-
-
-            <li data-toggle="collapse" data-target="#new" class="collapsed">
-              <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
-            </li>
-            <ul class="sub-menu collapse" id="new">
-              <li>New New 1</li>
-              <li>New New 2</li>
-              <li>New New 3</li>
-            </ul>
-
-
-            <li>
-              <a href="#">
-                <i class="fa fa-user fa-lg"></i> Profile
-              </a>
-            </li>
-
-            <li>
-              <a href="#">
-                <i class="fa fa-users fa-lg"></i> Users
-              </a>
-            </li>
           </ul>
-        </div>
+        </ul>
+
+
+        <!-- <ul  class="menu-content collapse out">
+          <li data-toggle="collapse"   [attr.data-target]="{{categoria.name}}"
+          *ngFor="let categoria of arrayCategorias; let RowIndex = index"  class="collapsed active">
+
+            
+            <ul class="sub-menu collapse" id="{{categoria.name}}">
+              <li class="sub-menu collapse"  *ngFor="let subMenu of categoria['sublevels']; let idx = index;">
+                  <a>
+                      <i class="fa fa-gift fa-lg"></i> {{subMenu.name}} 
+                      <span class="arrow"></span>
+                    </a>
+              </li>
+            </ul>
+          </li> -->
+        <!-- <li data-toggle="collapse" data-target="#products" class="collapsed active">
+            <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="products">
+            <li class="active"><a href="#">CSS3 Animation</a></li>
+            <li><a href="#">General</a></li>
+            <li><a href="#">Buttons</a></li>
+            <li><a href="#">Tabs & Accordions</a></li>
+            <li><a href="#">Typography</a></li>
+            <li><a href="#">FontAwesome</a></li>
+            <li><a href="#">Slider</a></li>
+            <li><a href="#">Panels</a></li>
+            <li><a href="#">Widgets</a></li>
+            <li><a href="#">Bootstrap Model</a></li>
+          </ul>
+
+
+          <li data-toggle="collapse" data-target="#service" class="collapsed">
+            <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="service">
+            <li>New Service 1</li>
+            <li>New Service 2</li>
+            <li>New Service 3</li>
+          </ul>
+
+
+          <li data-toggle="collapse" data-target="#new" class="collapsed">
+            <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
+          </li>
+          <ul class="sub-menu collapse" id="new">
+            <li>New New 1</li>
+            <li>New New 2</li>
+            <li>New New 3</li>
+          </ul>
+
+
+          <li>
+            <a href="#">
+              <i class="fa fa-user fa-lg"></i> Profile
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <i class="fa fa-users fa-lg"></i> Users
+            </a>
+          </li> -->
       </div>
-
-
-
-
-
-
-
-
-    </div> -->
-
-
-
+    </div>
   </ng-sidebar>
 
 </ng-sidebar-container>
