--- a/ShoppingCart/src/app/pages/carrito/carrito.component.html
+++ b/ShoppingCart/src/app/pages/carrito/carrito.component.html
@@ -1,7 +1,51 @@
 <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="row contenedorFiltros">
-        prueba
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <form class="form-inline">
+                <div class="col-lg-4">
+                    <div class="contenedorFiltro">
+                        <div class="row">
+                            <div class="col">
+                                <label>Cantidad</label>
+                                <input type="number" class="form-control" placeholder="Digite la cantidad" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="contenedorFiltro">
+                        <label>Disponible</label>
+                        <div class="row">
+                            <div class="col">
+                                <input type="radio" name="gender" value="male"> Si<br>
+                            </div>
+                            <div class="col">
+                                <input type="radio" name="gender" value="female"> No<br>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="contenedorFiltro">
+                        <label>Precio</label>
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4">
+                                <input class="form-control" placeholder="Desde" type="number" />
+                            </div>
+                            <div class="col-lg-4 col-md-4">
+                                <input class="form-control" placeholder="Hasta" type="number" />
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </div>
+    <hr>
+
     <div class="row contenedorProductos">
         <div class="list-items">
             <div class="list-item" *ngFor="let item of productos ">
@@ -16,14 +60,15 @@
 
 
                             <div class="col-12">
-
                                 <label class="card-text">{{item.price}}</label>
+                                <input id="{{item.id}}" type="number" min="1" class="form-control cantidad" 
+                                placeholder="1" max="{{item.quantity}}" [(ngModel)]="item.CantidadCompra"
+                                />
                             </div>
-
                         </div>
 
                         <div class="col-12">
-                            <a href="#" class="btn btn-primary btn-block">Anadir</a>
+                            <a class="btn btn-primary btn-block" (click)="anadirItem(item,item.CantidadCompra)">Anadir</a>
                         </div>
                     </div>
                 </div>
@@ -56,12 +101,9 @@
                             <span class="glyphicon glyphicon-trash"></span>
                         </button>
                     </div>
-
                 </li>
             </ul>
-
         </div>
-
         <hr>
         <div class="col-12">
             <label>Total: {{Total}}$</label>
