fromero: Modelo de Filtrado de datos

--- a/ShoppingCart/src/app/pages/carrito/carrito.component.html
+++ b/ShoppingCart/src/app/pages/carrito/carrito.component.html
@@ -44,7 +44,7 @@
                         <button class="btn btn-primary btn-sm btn-block">Buscar</button>
                     </div>
                     <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 botonFiltro">
-                        <button class="btn btn-primary btn-sm btn-block">Limpiar</button>
+                        <button class="btn btn-primary btn-sm btn-block"(click)="cleanFiltros()">Limpiar</button>
                     </div>
                 </div>
         </div>
